--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<div class="container">
 						<h2>About</h2>
 							<!-- <small>A Campus Event Platform to Improve the Experience of Real Life Engagements.</small> -->
-							<p>PinDown is a Boulder tech startup. Our app/web service is an event service designed for CU Boulder community. We collect all of the public campus events and put it on our app, a singular platform and a shared calendar. We have the ambition to connect both event holders/organizations and event viewers/individuals, or event viewers with other event viewers through attending events. We believe PinDown serves the mission of maximally benefiting people's career pursuance and social life in events they choose to participate. Thus, we call this app "A Campus Event Platform to Improve the Experience of Real Life Engagements."
+							<p>PinDown is a Boulder tech startup. Our app/web service is an event service designed for CU Boulder community. We collect all of the public campus events and put it on our app, a singular platform and a shared calendar. We have the ambition to connect both event holders/organizations and event viewers/individuals, or event viewers with other event viewers through attending events. We believe PinDown serves the mission of maximally benefiting people's career pursuit and social life in events they choose to participate. Thus, we call this app "A Campus Event Platform to Improve the Experience of Real Life Engagements."
 							</p>
 					</div>
 				</header>
@@ -216,7 +216,7 @@
 									<header>
 										<h3><font color="white">The map based platform</font></h3>
 									</header>
-									<p style="text-align: left"><font color="white">PinDown is a map based event platform with Google maps. We want to provide the experience of visualization.</font></p>
+									<p style="text-align: left"><font color="white">PinDown is a map based event platform with Google maps. We want to provide the experience of visualization when checking out pins/events.</font></p>
 								</section>
 							</div>
 
@@ -227,7 +227,7 @@
 									<header>
 										<h3><font color="white">One pin, one event</font></h3>
 									</header>
-									<p style="text-align: left"><font color="white">Each pin shown on the map indicates an event. YWhen clicking a pin, an info window that contains event details will pop up. </font></p>
+									<p style="text-align: left"><font color="white">Each pin shown on the map indicates an event. When clicking a pin, an info window that contains event details will pop up. </font></p>
 								</section>
 							</div>
 							
