--- a/index.html
+++ b/index.html
@@ -21,25 +21,6 @@
     </style>
 	</head>
 	<body class="is-preload">
-			<!-- <div id="topnav">
-				<header id="header">
-					<h1><a href="http://pindownapp.com"></a>PinDown</h1>
-					
-						<nav class="links">
-							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
-							</ul>
-						</nav>
-					
-				</header>
-			</div>
-		 -->
-
-
 			<div class="topnav">
 				<style>
 				.topnav a{
@@ -155,6 +136,7 @@
 							</p>
 					</div>
 				</header>
+			</section>
 
 			<section id="prefirst" class="main">
 				<!-- <header>
@@ -705,7 +687,7 @@
 					<ul class="menu">
 						<li><font color="white">&copy; PinDown. </font></li>
 						<li><a href="#"><font color="white">Terms of Service</font></a></li>
-						<li><a href="#"><font color="white">Privacy Policy</font></a></li>
+						<li><a href="file:///C:/Users/Shih-Hsi%20Chien/Documents/PinDown%20Web%20app/pindownapp.com/privacy.html#"><font color="white">Privacy Policy</font></a></li>
 					</ul>
 				</div>
 			</section>
