--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
     </style>
 	</head>
 	<body class="is-preload">
+			<!-- <div id="topnav">
+				<header id="header">
+					<h1><a href="http://pindownapp.com"></a>PinDown</h1>
+					
+						<nav class="links">
+							<ul>
+								<li><a href="#">Lorem</a></li>
+								<li><a href="#">Ipsum</a></li>
+								<li><a href="#">Feugiat</a></li>
+								<li><a href="#">Tempus</a></li>
+								<li><a href="#">Adipiscing</a></li>
+							</ul>
+						</nav>
+					
+				</header>
+			</div>
+		 -->
+
+
 			<div class="topnav">
 				<style>
 				.topnav a{
@@ -132,11 +151,18 @@
 					<div class="container">
 						<h2>About</h2>
 							<!-- <small>A Campus Event Platform to Improve the Experience of Real Life Engagements.</small> -->
-							<p>PinDown is a Boulder tech startup. Our app/web service is an event service designed for CU Boulder community. We collect all of the public campus events and put it on our app, a singular platform and a shared calendar. We have the ambition to connect both event holders/organizations and event viewers/individuals, or event viewers with other event viewers through attending events. We believe PinDown serves the mission of maximally benefiting people's career pursuit and social life in events they choose to participate. Thus, we call this app "A Campus Event Platform to Improve the Experience of Real Life Engagements."
+							<p>PinDown is a Boulder tech startup. We are an event service for mobile and web designed for CU Boulder community.
+								 We post all public campus events on our singular cross-platform service. Part of our job is working with campus event hosts and organizations to spread the word and generate higher levels of engagement. 
+								  We know sometimes it can be hard to reach across the entirety of the campus social web, so were keeping event hosts in the loop by allowing individual viewers to browse and commit to attending events. 
+								  We are building a point-based system based on user activity and feedback to best identify constructive feedback for events.
+								  We believe PinDown serves the mission of maximally benefiting people's career pursuit and social life in events they choose to participate. 
+								  Thus, we call this app "A Campus Event Platform to Improve the Experience of Real Life Engagements."
 							</p>
+							<!--
+							<p>PinDown is a Boulder tech startup. Our app/web service is an event service designed for CU Boulder community. We collect all of the public campus events and put it on our app, a singular platform and a shared calendar. We have the ambition to connect both event holders/organizations and event viewers/individuals, or event viewers with other event viewers through attending events. We believe PinDown serves the mission of maximally benefiting people's career pursuit and social life in events they choose to participate. Thus, we call this app "A Campus Event Platform to Improve the Experience of Real Life Engagements."
+							</p>-->
 					</div>
 				</header>
-			</section>
 
 			<section id="prefirst" class="main">
 				<!-- <header>
@@ -173,7 +199,7 @@
 							    * The callback parameter executes the initMap() function
 							    -->
 							    <script async defer
-							    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdHb_vSY0w0bzeOUXgDsOexiZl1K9PAhA&callback=initMap">
+							    src="https://maps.googleapis.com/maps/api/js?key=YourAPIKey&callback=initMap">
 						</script>
 					</div>
 				</header>
@@ -687,7 +713,7 @@
 					<ul class="menu">
 						<li><font color="white">&copy; PinDown. </font></li>
 						<li><a href="#"><font color="white">Terms of Service</font></a></li>
-						<li><a href="file:///C:/Users/Shih-Hsi%20Chien/Documents/PinDown%20Web%20app/pindownapp.com/privacy.html#"><font color="white">Privacy Policy</font></a></li>
+						<li><a href="#"><font color="white">Privacy Policy</font></a></li>
 					</ul>
 				</div>
 			</section>
